2009-10-08 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m61-1:
	- new snapshot
	- use system lucene again
	- drop shell.patch that went upstream

2009-09-28 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m60-1:
	- new snapshot
	- built against new db48
	- drop gcc43 buildfix
	- drop npapi buildfix for new xulrunner
	- enable report builder extension	
	- add gcc44 buildfix
	- use internal lucene again, system lucene is broken

2009-09-25 Andreas Radke <andyrtr at archlinux.org>

	- i686 pkg needs to be build with internal
	graphite, system grphite is broken without stlport

2009-09-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m59-1:
	- new snapshot
	- integrate OOo-sdk with pkg split
	- enable kde4 integration
	- make use of new system lucene, beanshell, saxon, vigra
	lpsolve, hyphen
	- enable openldap
	- don't use syste myth, currently broken
	# - use system boost again

2009-08-19 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m55-1:
	- new snapshot

2009-08-05 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m54-1:
	- new snapshot
	- backup sofficerc file to fix
	  http://bugs.archlinux.org/task/15161
	- move all files to /usr/lib
	- add startcenter menu entry, drop templates entry
	- minor changes to the install file
	
2009-07-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m52-1:
	- new snapshot
	
2009-07-05 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m51-2:
	rebuild with lowered compiler optimizations
	http://bugs.archlinux.org/task/15290

2009-07-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m51-1:
	- new snapshot
	- build with system-poppler
	- rebuild for libjpeg+xulrunner
	- added a buildfix for
	http://www.openoffice.org/issues/show_bug.cgi?id=103212

2009-06-13 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m50:
	- new snapshot

2009-06-02 Andreas Radke <andyrtr at archlinux.org>
